projects/vcf/assets/css/style.css
/*
Color Scheme
Main - 10364-3 (dark blue color of original banner)
Primary Accent - AFD33-8 (green color of dot in banner)
Secondary Accent - 496B5-F (green blue color of original logo)
*/

@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic);

body {
    width: 100%;
    height: auto;
    background: #fff;
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    font-size: 17px;
    line-height: 22px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    overflow-x: hidden;
}
h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: 700;
}
h3 {
    color: #103643;
    padding: 0;
}
body hr {
    height: 1px;
    border: none;
    background-color: #ccc;
}
a {
    text-decoration: none;
    color: #496b5f;
}
a {
    -webkit-transition: all .3s ease;
    -moz-transition: all .3s ease;
    -ms-transition: all .3s ease;
    -o-transition: all .3s ease;
    transition: all .3s ease;
}
a:hover {
  color: #496b5f;
}
a:focus {
    outline: 0;
}
img {
    max-width: 100%;
}
::selection {   /* Safari/Chrome */
    background: #AFD338;
    color: #fff;
}
::-moz-selection {  /* Firefox */
    background: #AFD338;
    color: #fff;
}
.btn {
    cursor: pointer;
    padding: 10px 16px;
    display: inline-block;
    margin: 10px 20px;
    outline: 0;
    position: relative;
    -webkit-transition: all .3s ease;
    -moz-transition: all .3s ease;
    transition: all .3s ease;
}
.btn-border {
    overflow: hidden;
    font-size: 16px;
    line-height: 22px;
    font-weight: 300;
}
.btn-border {
  background: #AFD338;
  border: 1px solid #103643;
  color: #103643;
}
.btn-border:active,
.btn-border:hover {
  background: #103643;
  border: 1px solid #103643;
  color: #AFD338;
}
.row {
    padding-bottom: 70px;
}
.center {
    text-align: center;
}
.section-title {
    text-align: center;
    text-transform: uppercase;
    padding: 48px 20px 20px 20px;
    font-size: 50px;
    font-weight: 700;
    color: #AFD338;
}
.section-title span {
    color: #103643;
}
.divider {
    width: 100%;
    height: 50vh;
}
#divider1 {
    background: url(../img/background/4.jpg) center center no-repeat;
}
#divider2 {
    background: url(../img/background/1.jpg) center center no-repeat;
}
#divider3 {
    background: url(../img/background/3.jpg) center center no-repeat;
}
#header .main-navigation{
    background-color: #fff;
    border-bottom: 1px solid #496b5f;
}
#header .main-navigation .navbar-header a {
    margin-bottom: 10px;
}
#header .main-navigation .navbar-header img {
    height: auto;
    display: inline-block;
    float: left;
    height: 30px; //adjusted so logo/banner and navbar toggle fit on same line
}
#header .navbar-collapse{
    background-color: #fff;
}
#header .nav {
    list-style: none;
    margin-top: 16px;
}
#header .nav li {
    margin: 0 0 0 24px;
}
#header .nav li a {
    text-transform: uppercase;
    padding: 5px 0;
    color: #496B5F;
    font-weight: 300;
    position: relative;
}
#header .nav li a:after {
    position: absolute;
    top: 100%;
    left: 0;
    border-bottom: 2px solid #496B5F;
    width: 100%;
    content: '';
    opacity: 0;
    -webkit-transition: opacity .3s, -webkit-transform .3s;
    -moz-transition: opacity .3s, -moz-transform .3s;
    transition: opacity .3s, transform .3s;
    -webkit-transform: translateY(10px);
    -moz-transform: translateY(10px);
    transform: translateY(10px);
}
#header .nav li.active a:after,
#header .nav li.active a,
#header .nav li a:hover::after,
#header .nav li a:hover,
#header .nav li a:focus {
    color: #AFD338;
    background: 0 0;
    opacity: 1;
    -webkit-transform: translateY(0px);
    -moz-transform: translateY(0px);
    transform: translateY(0px);
}
#header .affix {
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
    -webkit-animation-name: fadeInDown;
    animation-name: fadeInDown;
}
/*#header .affix .navbar-brand {
    padding: 12px;
}
#header .affix .navbar-brand img {
    width: 80%;
}
#header .affix .nav {
    margin-top: 10px;
}*/
#intro {
    background: url(../img/background/2.jpg) center center no-repeat;
    background-size: cover;
    color: #fff;
    text-align: center;
    padding-top: 18vh;
    padding-bottom: 35vh;
    margin-top: 60px; //used for fixed navbar, delete otherwise
}
#intro .overlay {
    background: url(../img/background/bg-overlay.png) rgba(0, 0, 0, .6) repeat;

}
#intro .main-text {
    padding: 0 20px;
}
#intro .main-text h1 {
    font-weight: 700;
    font-size: 5em;
    color: #AFD338;
}
#intro .main-text h1 span {
    font-family: 'Lane';
    color: #fff;

}
#intro .main-text h2 {
    color: #fff;
    font-size: 30px;
    font-weight: 300;
    line-height: 28px;
}
#intro .main-text .btn {
    font-size: 20px;
    padding: 12px 30px;
    margin-top: 30px;
}
#team {
    background-color: #103643;
    text-align: center;
    color: #fff;
    overflow: hidden;
}
#team > h1 {
    color: #AFD338;
}
#team h1 span {
    color: #fff;
}
#team .side-left {
    text-align: center;
}
#team .side-left img {
    border-radius: 4px;
    padding-bottom: 12px;
}
#team .item .info h4 {
    color: #fff;
}
#team .item .info p {
    color: #AFD338;
}
#team .side-left .info h4 {
    font-size: 22px;
    font-weight: 300;
    line-height: 12px;
}
#team .side-left .info p {
    font-weight: 300;
    font-size: 14px;
    letter-spacing: 1.1px;
    position: relative;
}
#team .side-left .info p:after {
    background: #fff;
    content: "";
    height: 1px;
    left: 32%;
    position: absolute;
    top: 125%;
    width: 34%;
}
#team .side-right p {
	color: #fff;
    padding: 0 20px;
    font-weight: 300;
    font-size: 16px;
    text-align: justify;
}
#team .owl-theme .owl-controls .owl-page span {
    background: 0 0;
    display: none;
}
#contact {
    background: #fff;
}
#contact-title,
#contact .overlay h1 .section-title .span {
    color: #103643;
}
#contact .contact-form .controls {
    padding-bottom: 20px;
}
#contact .contact-form .controls input.contact_input {
    color: #000;
    background-color: #fff;
    float: left;
    border: 1px solid #103643;
    font-size: 14px;
    font-weight: 300;
    height: 48px;
    padding: 0 12px;
    width: 88%;
}
#contact .contact-form .controls i {
    font-size: 18px;
    color: #496B5F;
    width: 48px;
    height: 48px;
    background-color: #fff;
    padding: 12px;
    text-align: center;
    border: 1px solid #496B5F;
    border-left: 0;
}
#contact .contact-form textarea {
    font-size: 14px;
    background-color: #fff;
    border: 1px solid #103643;
    width: 100%;
    padding: 2% 3%;
    height: 185px;
    border-radius: 0;
}
#contact .contact-form textarea:focus {
    box-shadow: none
}
#contact .contact-form .btn {
    color: #103643;    
    font-weight: 300;
    margin-top: 30px;
    font-size: 24px;
    width: 100%;
    margin: 20px 0;
    border: 1px solid #103643;
    background: #AFD338;
}
#contact .contact-form .btn:hover,
#contact .contact-form .btn:hover {
  background: #103643;
  border: 1px solid #103643;
  color: #AFD338;
}
#connected {
    background-color: #103643;
    width: 100%;
    color: #fff;
    text-align: center;
}
#connected > h1 {
    color: #AFD338;
}
#connected h1 span {
    color: #fff;
}
#connected hr {
    width: 200px;
    text-align: center;
}
#connected .contact-item {
    margin-top: 48px;
}
#connected .contact-item a {
    padding-bottom: 12px;
}
#connected .contact-item a i {
    font-size: 30px;
    color: #fff;
    padding-bottom: 16px;
}
#connected .contact-item h5 {
    color: #FDF2F0;
    font-weight: 300;
    font-size: 14px;
    text-transform: uppercase;
}
#connected .contact-item h4 {
    font-size: 18px;
    font-weight: 700;
    letter-spacing: 1px;
}
#connected .contact-item i:focus,
#connected .contact-item i:active,
#connected .contact-item i:hover {
    color: #AFD338;
}
#footer {
    background-color: #fff;
    width: 100%;
    height: 28px;
}
.scroll-top {
    right: 30px;
    bottom: 30px;
    background: #fff;
    border: 1px solid #103643;
    border-radius: 4px;
    width: 45px;
    height: 45px;
    cursor: pointer;
    text-align: center;
    z-index: 9999;
    -webkit-transition: all .2s linear;
    -moz-transition: all .2s linear;
    transition: all .2s linear;
}
.scroll-top:hover {
    background-color:  #103643;
    border: 1px solid #fff;
}
.scroll-top i {
    padding: 0 10px;
    font-size: 36px;
    color: #103643;
}
.scroll-top i:hover {
    color:  #fff;
}

